# picomotion

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  builder  builder.sh  main.c
.github/workflows/: ci.yml  clang-format.yml
app/: picomotion.c
inc/: hw_config.h  interrupts.h  qmi8658.h  sys_common.h
include/gc9a01/: gc9a01.h
include/gui/: gui.h
include/hwconfig/: hw_config.h
include/lv_config/: lv_conf.h
lib/calorie_estimator/: CMakeLists.txt  calorie_estimator.c  calorie_estimator.h
lib/gc9a01/: CMakeLists.txt  gc9a01.h
lib/gui/: CMakeLists.txt  gui.c  gui.h
lib/hwconfig/: CMakeLists.txt  hw_configure.c  sys_common.h
lib/qmi8658/: CMakeLists.txt
scripts/: builder.sh
src/: CMakeLists.txt  hw_configure.c  hw_init.c  interrupts.c  qmi8658.c  sys_common.c
src/gc9a01/: CMakeLists.txt  gc9a01.c
src/gui/: CMakeLists.txt  gui.c
src/hwconfig/: CMakeLists.txt  hw_configure.c
src/qmi8658/: CMakeLists.txt
